Fixed issue of pie chart not showing up in firefox by setting svg size to 100% of parent element.

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -85,3 +85,8 @@ footer {
   background-color: #055769;
   color: white;
 }
+
+svg {
+  width: 100%;
+  height: 100%;
+}
